feat: added a field for sorting rows

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <main class="main">
       <div class="wrapper">
+        <input type="text" class="entering-currency" placeholder="Currency..">
         <table class="table">
           <tbody>
             <tr>
@@ -23,7 +24,7 @@
               <td></td>
             </tr>
             <tr>
-              <td>EUR</td>
+              <td class="currency-name">EUR</td>
               <td></td>
               <td></td>
               <td></td>
@@ -33,7 +34,7 @@
               <td></td>
             </tr>
             <tr>
-              <td>USD</td>
+              <td class="currency-name">USD</td>
               <td></td>
               <td></td>
               <td></td>
@@ -43,7 +44,7 @@
               <td></td>
             </tr>
             <tr>
-              <td>RUR</td>
+              <td class="currency-name">RUR</td>
               <td></td>
               <td></td>
               <td></td>
