feat: added a calendar

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             </tr>
           </tbody>
         </table>
+        <input class="input-date" type="date" value="" max=""/>
       </div>
     </main>
   </body>
